<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_title" >

    <com.android.settingslib.widget.BannerMessagePreference
        android:key="qs_layout_dual_shade_banner"
        android:title="@string/qs_layout_dual_shade_banner_title"
        android:summary="@string/qs_layout_dual_shade_banner_summary"
        android:persistent="false"
        android:selectable="false"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general_category_title" >

        <org.derpfest.customizations.preference.QsPanelStylePreference
            android:key="qs_panel_style"
            android:title="@string/qs_panel_style_title"
            android:summary="@string/qs_panel_style_summary"
            android:defaultValue="0" />

        <org.derpfest.support.preferences.SystemSettingListPreference
            android:key="qs_tile_shape"
            android:title="@string/qs_tile_shape_title"
            android:entries="@array/qs_tile_shape_entries"
            android:entryValues="@array/qs_tile_shape_values"
            android:defaultValue="0" />

        <org.derpfest.support.preferences.SecureSettingListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:dialogTitle="@string/qs_tile_animation_style_title"
            android:summary="%s"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:defaultValue="0" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_bouncy_motion_mechanics"
            android:title="@string/qs_bouncy_motion_mechanics_title"
            android:summary="@string/qs_bouncy_motion_mechanics_summary"
            android:defaultValue="true" />

        <PreferenceCategory
            android:key="layout_category"
            android:title="@string/qs_layout_settings_title" >

            <Preference
                android:key="qs_layout_settings"
                android:title="@string/qs_layout_settings_title"
                android:summary="@string/qs_layout_category_summary"
                android:fragment="org.derpfest.customizations.fragment.QsLayoutSettings" />

        </PreferenceCategory>

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="qs_tile_label_hide"
            android:title="@string/qs_tile_label_hide_title"
            android:summary="@string/qs_tile_label_hide_summary"
            android:defaultValue="false"
            app:isPreferenceVisible="false" />

        <org.derpfest.customizations.preference.QsTileIconShapePreference
            android:key="qs_tile_icon_shape"
            android:title="@string/qs_tile_icon_shape_title"
            android:summary="%s"
            app:isPreferenceVisible="false" />

        <PreferenceCategory
            android:key="qs_classic_layout_category"
            android:title="@string/qs_layout_settings_title"
            app:isPreferenceVisible="false" >

            <Preference
                android:key="qs_classic_layout_settings"
                android:title="@string/qs_layout_settings_title"
                android:summary="@string/qs_layout_settings_summary"
                android:fragment="org.derpfest.customizations.fragment.QsClassicLayoutSettings" />

        </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_appearance_category"
        android:title="@string/qs_appearance_category_title" >

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_panel_bg_use_new_tint"
            android:title="@string/qs_panel_bg_use_new_tint_title"
            android:summary="@string/qs_panel_bg_use_new_tint_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_show_lunar_calendar"
            android:title="@string/qs_show_lunar_calendar_title"
            android:summary="@string/qs_show_lunar_calendar_summary"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_tiles_classic_random_accent"
            android:title="@string/qs_tiles_classic_random_accent_title"
            android:summary="@string/qs_tiles_classic_random_accent_summary"
            android:defaultValue="false"
            app:isPreferenceVisible="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="brightness_category"
        android:title="@string/brightness_category_title" >

        <org.derpfest.support.preferences.SystemSettingListPreference
            android:key="qs_brightness_slider_shape"
            android:title="@string/qs_brightness_slider_shape_title"
            android:entries="@array/qs_brightness_slider_shape_entries"
            android:entryValues="@array/qs_brightness_slider_shape_values"
            android:defaultValue="0" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_brightness_use_new_tint"
            android:title="@string/qs_brightness_use_new_tint_title"
            android:summary="@string/qs_brightness_use_new_tint_summary"
            android:defaultValue="false" />

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_show_auto_brightness_title"
            android:summary="@string/qs_show_auto_brightness_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_header_image_title">

        <Preference
            android:key="qs_header_image"
            android:title="@string/qs_header_image_title"
            android:summary="@string/qs_header_image_summary"
            android:fragment="org.derpfest.customizations.fragment.QsHeaderImageSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="data_usage_category"
        android:title="@string/data_usage_category_title" >

        <org.derpfest.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_data_usage"
            android:title="@string/qs_footer_datausage_title"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SecureSettingListPreference
            android:key="qs_data_usage_cycle_type"
            android:title="@string/qs_data_usage_cycle_type_title"
            android:summary="@string/qs_data_usage_cycle_type_summary"
            android:entries="@array/qs_data_usage_cycle_type_entries"
            android:entryValues="@array/qs_data_usage_cycle_type_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="footer_category"
        android:title="@string/footer_category_title" >

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_show_edit_button"
            android:title="@string/qs_show_edit_button_title"
            android:summary="@string/qs_show_edit_button_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_show_settings_icon"
            android:title="@string/qs_show_settings_icon_title"
            android:summary="@string/qs_show_settings_icon_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="qs_show_power_menu_icon"
            android:title="@string/qs_show_power_menu_icon_title"
            android:summary="@string/qs_show_power_menu_icon_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
