<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:key="dynamic_island_settings"
    android:title="@string/status_bar_dynamic_island_title">

    <org.derpfest.support.preferences.SystemSettingMainSwitchPreference
        android:key="status_bar_show_dynamic_island"
        android:title="@string/status_bar_dynamic_island_title"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="dynamic_island_customization_category"
        android:title="@string/dynamic_island_customization_title">

        <org.derpfest.support.preferences.SystemSettingSeekBarPreference
            android:key="status_bar_dynamic_island_width"
            android:title="@string/dynamic_island_width_title"
            android:summary="@string/dynamic_island_width_summary"
            android:max="200"
            settings:min="80"
            settings:units="dp"
            android:defaultValue="110"
            android:dependency="status_bar_show_dynamic_island" />

        <org.derpfest.support.preferences.SystemSettingSeekBarPreference
            android:key="status_bar_dynamic_island_height_scale"
            android:title="@string/dynamic_island_height_scale_title"
            android:summary="@string/dynamic_island_height_scale_summary"
            android:max="140"
            settings:min="70"
            settings:units="%"
            android:defaultValue="100"
            android:dependency="status_bar_show_dynamic_island" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dynamic_island_features_category"
        android:title="@string/dynamic_island_features_title">

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_media_controls"
            android:title="@string/dynamic_island_media_controls_title"
            android:summary="@string/dynamic_island_media_controls_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_lyrics"
            android:title="@string/dynamic_island_lyrics_title"
            android:summary="@string/dynamic_island_lyrics_summary"
            android:dependency="status_bar_dynamic_island_media_controls"
            android:defaultValue="false" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_ongoing_activities"
            android:title="@string/dynamic_island_ongoing_activities_title"
            android:summary="@string/dynamic_island_ongoing_activities_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_calls"
            android:title="@string/dynamic_island_calls_title"
            android:summary="@string/dynamic_island_calls_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_screen_recording"
            android:title="@string/dynamic_island_screen_recording_title"
            android:summary="@string/dynamic_island_screen_recording_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_alarms"
            android:title="@string/dynamic_island_alarms_title"
            android:summary="@string/dynamic_island_alarms_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_stopwatch"
            android:title="@string/dynamic_island_stopwatch_title"
            android:summary="@string/dynamic_island_stopwatch_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_flashlight"
            android:title="@string/dynamic_island_flashlight_title"
            android:summary="@string/dynamic_island_flashlight_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemSettingSwitchPreference
            android:key="status_bar_dynamic_island_live_scores"
            android:title="@string/dynamic_island_live_scores_title"
            android:summary="@string/dynamic_island_live_scores_summary"
            android:dependency="status_bar_show_dynamic_island"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dynamic_island_footer_category"
        android:title="@string/dynamic_island_footer_title">

        <Preference
            android:key="dynamic_island_footer"
            android:title="@string/dynamic_island_intro"
            android:icon="@drawable/ic_dynamic_bar_info"
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>
